--- a/ClientQ/register.ui
+++ b/ClientQ/register.ui
@@ -69,7 +69,7 @@
     </rect>
    </property>
    <property name="text">
-    <string>PushButton</string>
+    <string>确定</string>
    </property>
   </widget>
  </widget>
