聊天界面显示消息逻辑

--- a/ClientQ/chatinterface.ui
+++ b/ClientQ/chatinterface.ui
@@ -23,7 +23,7 @@
     </rect>
    </property>
   </widget>
-  <widget class="QPushButton" name="pushButton">
+  <widget class="QPushButton" name="pb_send">
    <property name="geometry">
     <rect>
      <x>470</x>
