--- a/ClientQ/chatinterface.ui
+++ b/ClientQ/chatinterface.ui
@@ -59,6 +59,19 @@
     </rect>
    </property>
   </widget>
+  <widget class="QPushButton" name="pb_video">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>460</y>
+     <width>80</width>
+     <height>23</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>video</string>
+   </property>
+  </widget>
  </widget>
  <resources/>
  <connections/>
