--- a/ClientQ/videointerface.ui
+++ b/ClientQ/videointerface.ui
@@ -13,7 +13,7 @@
   <property name="windowTitle">
    <string>Form</string>
   </property>
-  <widget class="QWidget" name="wid_fri" native="true">
+  <widget class="OpenCVWidget" name="wid_fri" native="true">
    <property name="geometry">
     <rect>
      <x>0</x>
@@ -36,7 +36,7 @@
     </property>
    </widget>
   </widget>
-  <widget class="QWidget" name="wid_usr" native="true">
+  <widget class="OpenCVWidget" name="wid_usr" native="true">
    <property name="geometry">
     <rect>
      <x>0</x>
@@ -60,6 +60,14 @@
    </widget>
   </widget>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>OpenCVWidget</class>
+   <extends>QWidget</extends>
+   <header location="global">opencvwidget.h</header>
+   <container>1</container>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections/>
 </ui>
